--- a/VKAnalyzer/Views/Service/Index.cshtml
+++ b/VKAnalyzer/Views/Service/Index.cshtml
@@ -20,6 +20,26 @@
                 </p>
             </th>
         </tr>
+        <tr>
+            <th>
+                @Html.ActionLink("Когортный анализ продаж", "VkCohortAnalyseOfSales", "Vk")
+            </th>
+            <th>
+                <p>
+                    Когортный анализ продаж.
+                </p>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                @Html.ActionLink("Анализатор мемасов", "MemasAnalyze", "Vk")
+            </th>
+            <th>
+                <p>
+                    Анализатор мемасов.
+                </p>
+            </th>
+        </tr>
     </tbody>
 </table>
 
