--- a/VKAnalyzer/Views/Vk/CohortAnalysis.cshtml
+++ b/VKAnalyzer/Views/Vk/CohortAnalysis.cshtml
@@ -1,6 +1,6 @@
 ﻿@model VKAnalyzer.BusinessLogic.CohortAnalyser.Models.CohortAnalysisResultModel
 @{
-    ViewBag.Title = "Когортный анализ";
+    ViewBag.Title = "Анализ";
 }
 
 <h2>Ваш запрос отправлен на обработку</h2>
