--- a/VKAnalyzer/Views/Vk/CohortAnalyseOfSales/Index.cshtml
+++ b/VKAnalyzer/Views/Vk/CohortAnalyseOfSales/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model VKAnalyzer.Models.VKModels.CohortAnalysysInputModel
+﻿@model VKAnalyzer.Models.VKModels.VkCohortAnalyseOfSalesModel
+
 @{
     ViewBag.Title = "Когортный анализ";
 
@@ -11,12 +12,13 @@
         }, "Value", "Text");
 }
 
+
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 @Scripts.Render("~/bundles/cohortanalyse")
 
-<h2>Когортный анализ</h2>
+<h2>Когортный анализ продаж</h2>
 
-@using (Html.BeginForm("CohortAnalysis", "Vk", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("VkCohortAnalyseOfSales", "Vk", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <hr />
@@ -36,7 +38,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.GroupId, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.GroupId, new { @class = "form-control"})
+            @Html.TextBoxFor(m => m.GroupId, new { @class = "form-control" })
         </div>
     </div>
     @*<div class="form-group">
@@ -63,6 +65,12 @@
         <div class="col-md-10">
             @Html.TextBoxFor(model => model.EndDate, new { @class = "form-control", placeholder = "Выберите дату" })
             @Html.ValidationMessageFor(model => model.EndDate)
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ListOfBuyers, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(model => model.ListOfBuyers, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
