--- a/VKAnalyzer/Views/Vk/CohortAnalyseOfSales/Index.cshtml
+++ b/VKAnalyzer/Views/Vk/CohortAnalyseOfSales/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model VKAnalyzer.Models.VKModels.VkCohortAnalyseOfSalesModel
+﻿@model VKAnalyzer.Models.VKModels.VkAnalyseSalesModel
 
 @{
     ViewBag.Title = "Когортный анализ";
