--- a/VKAnalyzer/Views/Vk/Index.cshtml
+++ b/VKAnalyzer/Views/Vk/Index.cshtml
@@ -16,7 +16,7 @@
 
 <h2>Когортный анализ</h2>
 
-@using (Html.BeginForm("CohortAnalysis", "Vk", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("AnalyzeActivities", "Vk", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <hr />
