--- a/VKAnalyzer/Views/Vk/CohortAnalyseOfSales/Index.cshtml
+++ b/VKAnalyzer/Views/Vk/CohortAnalyseOfSales/Index.cshtml
@@ -29,24 +29,47 @@
     <div class="form-group">
         @Html.Label("Куркин: 70468135", new { @class = "col-md-2 control-label" })
     </div>
+
+    <div class="form-group">
+        @Html.Label("Агентский номер - account_id: 1900013299", new { @class = "col-md-2 control-label" })
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Кабинет - client_id: 1604087573", new { @class = "col-md-2 control-label" })
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.ExcludeTargetGroup, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.ExcludeTargetGroup, (IEnumerable<SelectListItem>)ViewData["AllTargetGroups"], null, new { @class = "form-control" })
+        </div>
+    </div>
+    
     <div class="form-group">
         @Html.LabelFor(m => m.GroupId, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.GroupId, new { @class = "form-control" })
         </div>
     </div>
-    @*<div class="form-group">
-        @Html.LabelFor(m => m.ExcludeUsers, new { @class = "col-md-2 control-label" })
+    <div class="form-group">
+        @Html.LabelFor(m => m.AccountId, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.CheckBoxFor(m => m.ExcludeUsers, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.AccountId, new { @class = "form-control" })
         </div>
-    </div>*@
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ClientId, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.ClientId, new { @class = "form-control" })
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Step, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
