--- a/VKAnalyzer/Views/Vk/ListOfResults.cshtml
+++ b/VKAnalyzer/Views/Vk/ListOfResults.cshtml
@@ -68,3 +68,30 @@
         }
     </tbody>
 </table>
+
+<h3>Анализ продаж с группой ретаргета</h3>
+<table class="table table-responsive table-bordered">
+    <thead>
+        <tr>
+            <th>Название</th>
+            <th>Дата агрегации</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var result in Model.CohortSalesAnalyseResults)
+        {
+            <tr>
+                <th>
+                    @result.Name
+                </th>
+                <th>
+                    @result.DateOfCollection.ToString("dd-MM-yyyy HH:mm")
+                </th>
+                <th>
+                    @Html.ActionLink("Результаты", "CohortSalesResult", new { id = result.Id })
+                </th>
+            </tr>
+        }
+    </tbody>
+</table>
