--- a/VKAnalyzer/Views/Service/Index.cshtml
+++ b/VKAnalyzer/Views/Service/Index.cshtml
@@ -22,7 +22,7 @@
         </tr>
         <tr>
             <th>
-                @Html.ActionLink("Когортный анализ продаж", "VkCohortAnalyseOfSales", "Vk")
+                @Html.ActionLink("Когортный анализ продаж", "Index", "SalesAnalysis")
             </th>
             <th>
                 <p>
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <th>
-                @Html.ActionLink("Анализатор мемасов", "MemasAnalyze", "Vk")
+                @Html.ActionLink("Анализатор мемасов", "Index", "Memology")
             </th>
             <th>
                 <p>
