--- a/VKAnalyzer/Views/CohortAnalysis/Index.cshtml
+++ b/VKAnalyzer/Views/CohortAnalysis/Index.cshtml
@@ -16,7 +16,7 @@
 
 <h2>Когортный анализ</h2>
 
-@using (Html.BeginForm("AnalyzeActivities", "Vk", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Analyze", "CohortAnalysis", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <hr />
@@ -39,12 +39,6 @@
             @Html.TextBoxFor(m => m.GroupId, new { @class = "form-control"})
         </div>
     </div>
-    @*<div class="form-group">
-        @Html.LabelFor(m => m.ExcludeUsers, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.CheckBoxFor(m => m.ExcludeUsers, new { @class = "form-control" })
-        </div>
-    </div>*@
     <div class="form-group">
         @Html.LabelFor(m => m.Step, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
