--- a/VKAnalyzer/Views/Service/Index.cshtml
+++ b/VKAnalyzer/Views/Service/Index.cshtml
@@ -40,6 +40,16 @@
                 </p>
             </th>
         </tr>
+        <tr>
+            <th>
+                @Html.ActionLink("Аффинити индекс", "Index", "AffinityIndex")
+            </th>
+            <th>
+                <p>
+                    Аффинити индекс.
+                </p>
+            </th>
+        </tr>
     </tbody>
 </table>
 
