--- a/VKAnalyzer/Views/Shared/_Layout.cshtml
+++ b/VKAnalyzer/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 {
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Сервисы", "Index", "Service")</li>
-                        <li>@Html.ActionLink("Результаты", "ListOfResults", "Vk")</li>
+                        <li>@Html.ActionLink("Результаты", "Results", "Vk")</li>
                     </ul>
                 }
                 @Html.Partial("_LoginPartial")
