--- a/VKAnalyzer/Views/Vk/Results.cshtml
+++ b/VKAnalyzer/Views/Vk/Results.cshtml
@@ -7,6 +7,9 @@
 
 <h2>Доступные результаты</h2>
 
+
+<h3>@Html.ActionLink("Аффинити индекс", "Results", "AffinityIndex")</h3>
+
 <h3>Когортный анализ</h3>
 <table class="table table-responsive table-bordered">
     <thead>
