--- a/VKAnalyzer/Views/AffinityIndex/Index.cshtml
+++ b/VKAnalyzer/Views/AffinityIndex/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model VKAnalyzer.Models.VKModels.AffinityIndex.AffinityIndexOptionsModel
 
 @{
-    ViewBag.Title = "Когортный анализ";
+    ViewBag.Title = "Аффинити Индекс";
 }
 
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -17,6 +17,8 @@
         @Html.ValidationSummary()
         @Html.HiddenFor(x => x.AccountId)
         @Html.HiddenFor(x => x.ClientId)
+        @Html.HiddenFor(x => x.Auditory1.City)
+        @Html.HiddenFor(x => x.Auditory2.City)
         <div class="form-group">
             @Html.Label("Велосипеды: 77390912", new { @class = "col-md-3 control-label" })
         </div>
@@ -50,11 +52,11 @@
                     @Html.TextBoxFor(m => m.Auditory1.Name, new { @class = "form-control" })
                 </div>
             </div>
-
+            
             <div class="form-group">
-                @Html.LabelFor(m => m.Auditory1.Cities, new { @class = "col-md-3 control-label" })
+                @Html.LabelFor(m => m.Auditory1.City, new { @class = "col-md-3 control-label" })
                 <div class="col-md-8">
-                    @Html.TextBoxFor(m => m.Auditory1.Cities, new { @class = "form-control", @readonly = "readonly", @Value = "Санкт-Петербург" })
+                    <select id="CityName1" name="CityName1" class="form-control"></select>
                 </div>
             </div>
 
@@ -106,9 +108,9 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Auditory2.Cities, new { @class = "col-md-3 control-label" })
+                @Html.LabelFor(m => m.Auditory2.City, new { @class = "col-md-3 control-label" })
                 <div class="col-md-8">
-                    @Html.TextBoxFor(m => m.Auditory2.Cities, new { @class = "form-control", @readonly = "readonly", @Value = "Санкт-Петербург" })
+                    <select id="CityName2" name="CityName2" class="form-control"></select>
                 </div>
             </div>
 
@@ -171,6 +173,31 @@
         });
 
         $(function () {
+            disableCities();
+
+            $.getJSON("/Vk/GetCities")
+            .done(function (data) {
+                console.log(JSON.stringify(data.response));
+                $.each(data.response, function (index, value) {
+                    var citiesOption = document.createElement('option');
+                    citiesOption.value = value.id;
+                    citiesOption.text = value.name;
+
+                    if (index === 0) {
+                        $("#Auditory1_City").attr("value", value.id);
+                        $("#Auditory2_City").attr("value", value.id);
+                    }
+
+                    $('#CityName1').append(citiesOption.cloneNode(true));
+                    $('#CityName2').append(citiesOption.cloneNode(true));
+                    //appendValues(citiesOption);
+                });
+            });
+
+            enableCities();
+        });
+
+        $(function () {
             disableAll();
 
             $.getJSON("/Vk/GetAccounts")
@@ -203,6 +230,14 @@
 
         $("#Clients").change(function () {
             $("#ClientId").attr("value", $(this).val());
+        });
+
+        $("#CityName1").change(function () {
+            $("#Auditory1_City").attr("value", $(this).val());
+        });
+
+        $("#CityName2").change(function () {
+            $("#Auditory2_City").attr("value", $(this).val());
         });
 
         function getClients(accountId) {
@@ -243,6 +278,16 @@
         function enableAll(disableClient) {
             $("#AccountNames").prop('disabled', false);
             $("#Clients").prop('disabled', disableClient);
+        }
+
+        function disableCities() {
+            $("#CityName1").prop('disabled', true);
+            $("#CityName2").prop('disabled', true);
+        }
+
+        function enableCities() {
+            $("#CityName1").prop('disabled', false);
+            $("#CityName2").prop('disabled', false);
         }
     });
 </script>
